module/core/derive_tools/tests/inc/add/compile_fails/unit_struct_manual.stderr
error[E0609]: no field `0` on type `UnitStruct`
 --> tests/inc/add/compile_fails/unit_struct_manual.rs
  |
  |     self.0 + _other.0
  |          ^ unknown field

error[E0609]: no field `0` on type `UnitStruct`
 --> tests/inc/add/compile_fails/unit_struct_manual.rs
  |
  |     self.0 + _other.0
  |                     ^ unknown field
